# dexcom-nightscout-i3

./: LICENSE  Makefile  README.md  requirements.txt  setup.cfg
docs/: README.md
src/nightscout/: main.py  nightscout.py
tests/: test_nigthscout.py
utils/: icons.py
