[metadata]
name = dexcom-nightscout-i3
version = 0.1
description = A Python application to retrieve data from Dexcom Share through Nightscout and update the i3 status bar on Manjaro Linux.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernardo Alvez
author_email = bernardo.alvez@gmail.com
url = https://github.com/balcruz/dexcom-nightscout-i3
license = MIT
keywords = dexcom, nightscout, i3, statusbar
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires =
    pytz
    datetime
    python-dotenv

[options.entry_points]
console_scripts =
    dexcom-nightscout = dexcom_nightscout.main:main
